# Zadacha_dva

./: README.md  main.py  pyproject.toml
